# nanochat-burn

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  Roadmap-dev.md
configs/: mini.toml  tiny.toml
data/: .gitignore  README.md  download_datasets.py  download_datasets.sh  download_raw_datasets.py  export_datasets.py  generate_synthetic_datasets.py
data/assets/: ui.html
data/fixtures/parity/: model.json  modules.json  optimizer.json  tokenizer.json
data/fixtures/tiny/: corpus.txt  eval.jsonl  sft.jsonl
docs/: README.md  alignment.md  data.md  gpu-operators.md  inference.md  model.md  optimizer.md  tokenizer.md  training.md
examples/: tokenizer.rs
src/: artifact.rs  benchmark.rs  checkpoint.rs  common.rs  dataloader.rs  dataset.rs  engine.rs  experiment.rs  gpt.rs  lib.rs  optim.rs  report.rs  tokenizer.rs
src/engine/: calculator.rs  eval.rs  inference.rs  pretrain.rs  quant.rs  recipe.rs  rl.rs  sandbox.rs  scheduler.rs  serving.rs  sft.rs  speculative.rs
src/gpt/: cache.rs  parity.rs  quant.rs  tests.rs
src/optim/: mod.rs  muon.rs  parity.rs
tools/: download_datasets.py  export_tokenizer_parity.py  export_torch_parity.py  generate_synthetic_datasets.py  parity_report.py
