
[package]
name = "nanochat-burn"
version = "0.1.0"
edition = "2024"
authors = ["MeiHui FAN <mhfan@ustc.edu>"]
description = "A clean, idiomatic Rust port of nanochat using the Burn framework"
license = "MIT"
default-run = "chat"

[features]
default = []
ndarray = ["burn/ndarray"]
web = ["dep:axum", "dep:futures-core"]  # Web UI server dependencies

[[bin]]
name = "chat_web"
path = "src/bin/chat_web.rs"
required-features = ["web"]

[dependencies]
# Burn 核心、自动微分、WGPU 与参数存储
burn = { version = "0.21", features = ["autodiff", "wgpu", "store"] }

# 并行计算与异步运行时
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "net"] }
rayon = "1.10"

# 配置、实验清单与 checkpoint/优化器状态序列化
serde = { version = "1.0", features = ["derive"] }
safetensors = "0.7"  # 与 Burn Store 对齐；用于动态优化器状态
serde_json = "1.0"
toml = "1.1"

# 日志与系统级 Profiling 诊断
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# 数据与系统工具
memmap2 = "0.9"
bytemuck = "1.25"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
cubecl-runtime = "0.10"

# Web 服务框架（仅 chat_web 二进制需要，通过 'web' feature 按需编译）
axum = { version = "0.8", optional = true }
futures-core = { version = "0.3", optional = true }
fancy-regex = { version = "0.18", default-features = false, features = ["std", "unicode", "perf"] }

[profile.release]
opt-level = 3
codegen-units = 8
panic = "abort"
debug = false
lto = true

[lints.clippy]
needless_range_loop = "allow"
manual_is_multiple_of = "allow"
